src/test/compile-fail/vector-no-ann.rs
// error-pattern:cannot determine a type
fn main() -> () {
  auto foo = [];
}
